fix caixa not showing in vendas add

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,16 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
 
 * {
-  transition: all 1s;
+  transition: ease-in-out 1s;
 }
 
 table tr td {
   vertical-align: middle;
 }
-
+.table-estoque-venda {
+  background-color: rgba(0, 255, 64, 0.111);
+  border-radius: 5px;
+}
 .App {
   text-align: center;
   background-color: #f1f1f1;
